RESOLVED FIXED284622
[css-masonry] Definite items are no longer placed first by default
https://bugs.webkit.org/show_bug.cgi?id=284622
Summary [css-masonry] Definite items are no longer placed first by default
Brandon
Reported 2024-12-13 03:34:40 PST
Definite items are no longer placed first.
Attachments
Brandon
Comment 1 2024-12-13 03:36:18 PST
Brandon
Comment 2 2024-12-16 05:55:10 PST
EWS
Comment 3 2024-12-18 06:51:19 PST
Committed 288003@main (504067dd96c0): <https://commits.webkit.org/288003@main> Reviewed commits have been landed. Closing PR #37903 and removing active labels.
Tim Nguyen (:ntim)
Comment 4 2025-01-03 06:44:49 PST
Note You need to log in before you can comment on or make changes to this bug.